--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,4 +1,4 @@
-.subscribe {
+/* .subscribe {
   padding-top: 72px;
   padding-bottom: 94px;
   margin-left: 93px;
@@ -36,7 +36,7 @@
       margin-left: 10px;
     }
   }
-}
+} */
 
 /*.subscribe-title {
   font-weight: bold;
@@ -47,7 +47,7 @@
   color: $light-color;
 }*/
 
-.subscribe-form {
+/* .subscribe-form {
   display: flex;
   padding-top: 20px;
 
@@ -73,7 +73,7 @@
       outline: none;
     }
   }
-}
+} */
 
 /*.subscribe-form-input {
   width: 358px;
