--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,4 +1,4 @@
-.advantages {
+/* .advantages {
   display: flex;
   flex-wrap: wrap;
 
@@ -53,3 +53,4 @@
   line-height: 1.714;
   letter-spacing: 0.03em;
 }
+ */
