--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,4 +1,4 @@
-.clients-section-title {
+/* .clients-section-title {
   margin-bottom: 50px;
   font-weight: bold;
   font-size: 36px;
@@ -44,7 +44,7 @@
       fill: $accent-color;
     }
   }
-}
+} */
 
 /*.clients-list-link {
   display: flex;
@@ -77,7 +77,7 @@
   fill: $accent-color;
 }*/
 
-.ya-co {
+/* .ya-co {
   width: 44.27px;
   height: 49.23px;
 }
@@ -106,3 +106,4 @@
   width: 88.48px;
   height: 45.44px;
 }
+ */
