--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,4 +1,4 @@
-.portfolio-buttons {
+/* .portfolio-buttons {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
@@ -121,4 +121,4 @@
       transform: translateY(0%);
     }
   }
-}
+} */
