--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,9 +29,26 @@ img {
   font-style: normal;
 }
 
+@media screen and (min-width: 768px) {
+  .address {
+    padding: 21px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address {
+    padding: 32px 0;
+  }
+}
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding: 94px 0;
+  }
 }
 
 .title {
@@ -39,24 +56,66 @@ img {
 }
 
 .container {
-  width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .site-logo {
-  margin-right: 93px;
   color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.167;
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 768px) {
+  .site-logo {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.192;
+  }
+}
+
 .navigation .site-logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding: 16px 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .navigation .site-logo {
+    padding: 26px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation .site-logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .logo-half {
@@ -72,8 +131,35 @@ img {
   align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  .navigation {
+    width: 480px;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .navigation {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation {
+    width: 1200px;
+  }
+}
+
 .site-nav {
   display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav {
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
 }
 
 .site-nav-item {
@@ -81,20 +167,43 @@ img {
 }
 
 .site-nav-item:not(:last-child) {
-  margin-right: 50px;
+  margin-bottom: 40px;
+  /* @media screen and (max-width: 767px) {
+        margin-bottom: 40px;
+      } */
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav-item:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 50px;
+  }
 }
 
 .site-nav-item .link {
-  padding: 32px 0px;
+  padding: 0px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav-item .link {
+    padding: 32px 0;
+  }
 }
 
 .site-nav-link {
   color: #212121;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.143;
+  font-size: 18px;
+  line-height: 1.172;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav-link {
+    font-size: 14px;
+    line-height: 1.143;
+  }
 }
 
 .site-nav-link:hover, .site-nav-link:focus {
@@ -110,27 +219,59 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  /* bottom: 0; */
   display: block;
   width: 100%;
   height: 4px;
   background-color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .current::after {
+    bottom: 0;
+  }
+}
+
 .contacts-list {
   display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-list {
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .contacts-list {
+    flex-direction: column;
+  }
 }
 
 .contacts-list-link {
   display: flex;
   align-items: center;
-  justify-content: center;
-  color: #757575;
+  /* justify-content: center; */
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.143;
+  font-size: 18px;
+  line-height: 1.667;
   letter-spacing: 0.02em;
+  color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list-link {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list-link {
+    justify-content: center;
+    font-size: 14px;
+    line-height: 1.143;
+  }
 }
 
 .contacts-list-link:hover, .contacts-list-link:focus {
@@ -149,16 +290,32 @@ img {
 }
 
 .contacts-list-item:first-child {
-  margin-right: 50px;
+  margin-right: 0px;
 }
 
-.contacts-list-item .link {
-  padding: 32px 0px;
+@media screen and (min-width: 1200px) {
+  .contacts-list-item:first-child {
+    margin-right: 50px;
+  }
 }
 
 .envelope {
   width: 16px;
-  height: 12px;
+  height: 11px;
+}
+
+@media screen and (min-width: 768px) {
+  .envelope {
+    width: 14px;
+    height: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .envelope {
+    width: 16px;
+    height: 12px;
+  }
 }
 
 .smartphone {
@@ -166,93 +323,108 @@ img {
   height: 16px;
 }
 
-.social-networks {
+@media screen and (min-width: 768px) {
+  .smartphone {
+    height: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .smartphone {
+    height: 15px;
+  }
+}
+
+/* .social-networks {
   display: flex;
   justify-content: center;
-}
 
-.social-networks-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: $light-color;
 
-.social-networks-link:hover, .social-networks-link:focus {
-  background-color: #2196f3;
-}
+    transition: background-color $duration $timing-function;
 
-.footer .social-networks-link {
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &:hover,
+    &:focus {
+      background-color: $accent-color;
+    }
 
-.social-networks-item:not(:last-child) {
-  margin-right: 10px;
-}
+    .footer & {
+      background-color: rgba(255, 255, 255, 0.1);
 
-.social-networks-svg {
-  width: 20px;
-  height: 20px;
-  fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+      transition: background-color $duration $timing-function;
+    }
+  }
 
-.social-networks-link:hover .social-networks-svg,
-.social-networks-link:focus .social-networks-svg {
-  fill: #ffffff;
-}
+  &-item:not(:last-child) {
+    margin-right: 10px;
+  }
 
-.footer .social-networks-svg {
-  width: 20px;
-  height: 20px;
-  fill: #ffffff;
-}
+  &-svg {
+    width: 20px;
+    height: 20px;
+    fill: $social-networks-color;
 
-.subscribe {
+    transition: fill $duration $timing-function;
+
+    .social-networks-link:hover &,
+    .social-networks-link:focus & {
+      fill: $light-color;
+    }
+
+    .footer & {
+      width: 20px;
+      height: 20px;
+      fill: $light-color;
+    }
+  }
+}
+ */
+/* .subscribe {
   padding-top: 72px;
   padding-bottom: 94px;
   margin-left: 93px;
-}
 
-.subscribe-title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1, 142;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
+  &-title {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1, 142;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $light-color;
+  }
 
-.subscribe-btn {
-  width: 200px;
-  height: 50px;
-  margin-left: 12px;
-  padding-left: 29px;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1, 875;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-}
+  &-btn {
+    width: 200px;
+    height: 50px;
+    margin-left: 12px;
+    padding-left: 29px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1, 875;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: $light-color;
+    background: $accent-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
 
-.subscribe-btn-svg {
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
-}
-
+    &-svg {
+      width: 24px;
+      height: 24px;
+      margin-left: 10px;
+    }
+  }
+} */
 /*.subscribe-title {
   font-weight: bold;
   font-size: 14px;
@@ -261,31 +433,33 @@ img {
   text-transform: uppercase;
   color: $light-color;
 }*/
-.subscribe-form {
+/* .subscribe-form {
   display: flex;
   padding-top: 20px;
-}
 
-.subscribe-form-input {
-  width: 358px;
-  height: 50px;
-  padding-left: 15px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-  font-size: 16px;
-  line-height: 1.25;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
+  &-input {
+    width: 358px;
+    height: 50px;
+    padding-left: 15px;
 
-.subscribe-form-input:focus {
-  outline: none;
-}
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
 
+    font-size: 16px;
+    line-height: 1.25;
+    align-items: center;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+
+    &:focus {
+      outline: none;
+    }
+  }
+} */
 /*.subscribe-form-input {
   width: 358px;
   height: 50px;
@@ -311,20 +485,21 @@ img {
   outline: none;
 }*/
 .header {
+  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
 .header .container {
   display: flex;
   align-items: center;
-  height: 80px;
+  /* height: 80px; */
 }
 
 .header .address {
   margin-left: auto;
 }
 
-.portfolio-buttons {
+/* .portfolio-buttons {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
@@ -341,23 +516,27 @@ img {
   box-sizing: border-box;
   box-shadow: none;
   border-radius: 4px;
-  background-color: #f5f4fa;
+  background-color: $team-color;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: color $duration $timing-function,
+    background-color $duration $timing-function,
+    box-shadow $duration $timing-function;
 
-.portfolio-selection-btn:hover, .portfolio-selection-btn:focus {
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  color: #ffffff;
-  background-color: #2196f3;
+  &:hover,
+  &:focus {
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    color: $light-color;
+    background-color: $accent-color;
+  }
 }
 
 .portfolio-list {
@@ -371,102 +550,102 @@ img {
   height: 404px;
   box-sizing: border-box;
   margin-bottom: 30px;
-  background: #ffffff;
-}
+  background: $light-color;
 
-.portfolio-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
+  &:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
 
-.portfolio-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 
-.portfolio-item-link {
-  display: block;
-  box-shadow: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &-link {
+    display: block;
+    box-shadow: none;
+    transition: box-shadow $duration $timing-function;
 
-.portfolio-item-link:hover, .portfolio-item-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
 
-.portfolio-item-box {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
-  border-top: none;
-}
+  &-box {
+    padding: 20px 24px;
+    border: 1px solid #eeeeee;
+    border-top: none;
+  }
 
-.portfolio-item-title {
-  margin-bottom: 4px;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
+  &-title {
+    margin-bottom: 4px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+  }
 
-.portfolio-item-desc {
-  color: #757575;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.03em;
+  &-desc {
+    color: $primary-text-color;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+  }
 }
 
 .portfolio-item-img {
   position: relative;
   display: block;
   overflow: hidden;
-}
 
-.portfolio-item-img::after {
-  content: "Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.";
-  position: absolute;
-  display: block;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  padding: 63px 24px;
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &::after {
+    content: "Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.";
+    position: absolute;
+    display: block;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: $light-color;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition: transform $duration $timing-function;
 
-.portfolio-item-link:hover .portfolio-item-img::after,
-.portfolio-item-link:focus .portfolio-item-img::after {
-  transform: translateY(0%);
-}
-
-.footer {
+    .portfolio-item-link:hover &,
+    .portfolio-item-link:focus & {
+      transform: translateY(0%);
+    }
+  }
+} */
+/* .footer {
   display: flex;
   height: 252px;
-  background-color: #2f303a;
-}
+  background-color: $background-color;
 
-.footer .container {
-  display: flex;
-}
+  & .container {
+    display: flex;
+  }
 
-.footer .address {
-  width: 231px;
-  margin-top: 20px;
-}
+  & .address {
+    width: 231px;
+    margin-top: 20px;
+  }
 
-.footer-contacts-list {
-  padding: 60px 0px;
-  margin-right: 70px;
-}
+  &-contacts-list {
+    padding: 60px 0px;
+    margin-right: 70px;
+  }
 
-.footer-list-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
+  &-list-item:not(:last-child) {
+    margin-bottom: 9px;
+  }
+} */
 /*.footer .container {
   display: flex;
 }*/
@@ -481,32 +660,35 @@ img {
 /*.footer-list-item:not(:last-child) {
   margin-bottom: 9px;
 }*/
-.footer-list-link {
-  color: #ffffff;
+/* .footer-list-link {
+  color: $light-color;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-list-link:hover, .footer-list-link:focus {
-  color: #2196f3;
-}
+  transition: color $duration $timing-function;
 
-.footer-list-link-contact {
-  color: rgba(255, 255, 255, 0.6);
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 
-.footer-list-link-contact:hover, .footer-list-link-contact:focus {
-  color: #2196f3;
-}
+  &-contact {
+    color: $contacts-color;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
 
+    transition: color $duration $timing-function;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
+} */
 /*.footer-list-link-contact {
   color: $contacts-color;
   font-weight: normal;
@@ -523,7 +705,7 @@ img {
   color: $accent-color;
 }*/
 /*====social-networks====*/
-.footer-social-networks {
+/* .footer-social-networks {
   padding-top: 72px;
   padding-bottom: 100px;
 }
@@ -535,11 +717,11 @@ img {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: $light-color;
 }
 
 .social-networks-link:hover,
 .social-networks-link:focus {
-  background-color: #2196f3;
-}
+  background-color: $accent-color;
+} */
 /*# sourceMappingURL=portfolio.css.map */
