--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,11 +26,22 @@ img {
 
 .address {
   font-style: normal;
+
+  @media screen and (min-width: 768px) {
+    padding: 21px 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 32px 0;
+  }
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 
 .title {
