--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,15 +1,32 @@
 .site-logo {
-  margin-right: 93px;
   color: $accent-color;
   font-family: $secondary-font;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.167;
   letter-spacing: 0.03em;
 
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.192;
+  }
+
   .navigation & {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    padding: 16px 0;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      padding: 26px 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 24px;
+      padding-bottom: 25px;
+    }
   }
 }
 
