--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,31 +17,31 @@
   opacity: 0;
   pointer-events: none;
 }
-
+/* 
 .wrapper-modal {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100%;
   padding: 15px;
-}
+}*/
 
-.modal-window {
+/* .modal-window {
   position: relative;
   display: block;
   /*top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);*/
-  width: 528px;
+/* width: 528px;
   /*height: 581px;*/
-  padding: 40px;
+/* padding: 40px;
   background: $light-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-}
+} */
 
-.close-btn {
+/* .close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -200,3 +200,4 @@
   border: none;
   cursor: pointer;
 }
+ */
