--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,30 +1,67 @@
 .navigation {
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 767px) {
+    width: 480px;
+    justify-content: space-between;
+  }
+
+  @media screen and (max-width: 1199px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .site-nav {
   display: flex;
+  align-items: center;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
 
   &-item {
     display: flex;
 
     &:not(:last-child) {
-      margin-right: 50px;
+      margin-bottom: 40px;
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+        margin-right: 50px;
+      }
+
+      /* @media screen and (max-width: 767px) {
+        margin-bottom: 40px;
+      } */
     }
 
     & .link {
-      padding: 32px 0px;
+      padding: 0px;
+
+      @media screen and (min-width: 768px) {
+        padding: 32px 0;
+      }
     }
   }
   &-link {
     color: $title-text-color;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.143;
+    font-size: 18px;
+    line-height: 1.172;
     letter-spacing: 0.02em;
 
     transition: color $duration $timing-function;
+
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.143;
+    }
 
     &:hover,
     &:focus {
@@ -41,10 +78,14 @@
     content: "";
     position: absolute;
     left: 0;
-    bottom: 0;
+    /* bottom: 0; */
     display: block;
     width: 100%;
     height: 4px;
     background-color: $accent-color;
+
+    @media screen and (min-width: 768px) {
+      bottom: 0;
+    }
   }
 }
