--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   display: flex;
   height: 252px;
   background-color: $background-color;
@@ -20,7 +20,7 @@
   &-list-item:not(:last-child) {
     margin-bottom: 9px;
   }
-}
+} */
 /*.footer .container {
   display: flex;
 }*/
@@ -39,7 +39,7 @@
   margin-bottom: 9px;
 }*/
 
-.footer-list-link {
+/* .footer-list-link {
   color: $light-color;
   font-weight: normal;
   font-size: 14px;
@@ -67,7 +67,7 @@
       color: $accent-color;
     }
   }
-}
+} */
 
 /*.footer-list-link-contact {
   color: $contacts-color;
@@ -87,7 +87,7 @@
 }*/
 
 /*====social-networks====*/
-.footer-social-networks {
+/* .footer-social-networks {
   padding-top: 72px;
   padding-bottom: 100px;
 }
@@ -105,4 +105,4 @@
 .social-networks-link:hover,
 .social-networks-link:focus {
   background-color: $accent-color;
-}
+} */
