--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,4 @@
-.hero {
+/* .hero {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
@@ -46,4 +46,4 @@
     justify-content: center;
     height: 600px;
   }
-}
+} */
