--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "./components/logo";
 @import "./components/navigation";
 @import "./components/contacts";
-
+@import "./components/menu";
 @import "./components/modal";
 @import "./components/social-networks";
 @import "./components/subscribe";
