--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,13 @@ img {
   margin: 0 auto;
 }
 
+.hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
@@ -782,9 +789,15 @@ img {
   margin-left: auto;
 }
 
-/* .hero {
-  max-width: 1600px;
-  height: 600px;
+.hero {
+  /* background-image: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  ); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 118px 0;
+  /* height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
@@ -794,43 +807,96 @@ img {
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/main_section_1/hero-bg-img.jpg);
-  background-color: $background-color;
-
-  &-title {
-    width: 696px;
-    margin-bottom: 30px;
-    color: $light-color;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.364;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-  }
-
-  &-btn {
-    width: 200px;
-    height: 50px;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1, 875;
-    letter-spacing: 0.06em;
-    color: $light-color;
-    background: $accent-color;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-  }
-
-  & .container {
+  background-color: $background-color; */
+  /*  & .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 600px;
+  } */
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
   }
-} */
+}
+
+.hero-title {
+  margin-bottom: 30px;
+  color: #ffffff;
+  font-weight: 900;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .hero-title {
+    font-size: 26px;
+    line-height: 1.615;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.364;
+  }
+}
+
+.hero-btn {
+  width: 200px;
+  height: 50px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1, 875;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-mobile.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-tablet.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-desktop.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-desktop@2x.jpg);
+  }
+}
+
 /* .advantages {
   display: flex;
   flex-wrap: wrap;
