--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 *,
 *::before,
 *::after {
@@ -58,6 +70,13 @@ img {
 .container {
   padding: 0 15px;
   margin: 0 auto;
+}
+
+.hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (min-width: 480px) {
@@ -332,6 +351,77 @@ img {
 @media screen and (min-width: 1200px) {
   .smartphone {
     height: 15px;
+  }
+}
+
+.menu-btn {
+  /*position: absolute;
+  top: 8px;
+  right: 8px;*/
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  /*align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  background: $light-color;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;*/
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+
+.menu-btn-svg:hover, .menu-btn-svg:focus {
+  fill: #2196f3;
+}
+
+.menu-btn .menu-btn-close {
+  display: none;
+}
+
+.menu-btn.is-open .menu-btn-close {
+  display: block;
+}
+
+.menu-btn.is-open .menu-btn-open {
+  display: none;
+}
+
+.menu-container {
+  display: flex;
+  background-color: #ffffff;
+  text-align: center;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    display: none;
+    padding: 60px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
   }
 }
 
