--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,6 +2,13 @@
   padding: 0 15px;
   margin: 0 auto;
 
+  .hero & {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   @media screen and (min-width: 480px) {
     width: 480px;
   }
