--- a/css/main.css
+++ b/css/main.css
@@ -443,29 +443,40 @@ img {
   pointer-events: none;
 }
 
-/* 
 .wrapper-modal {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100%;
   padding: 15px;
-}*/
-/* .modal-window {
+}
+
+.modal-window {
   position: relative;
   display: block;
   /*top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);*/
-/* width: 528px;
-  /*height: 581px;*/
-/* padding: 40px;
-  background: $light-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
+  height: 581px;*/
+  padding: 40px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-} */
-/* .close-btn {
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .modal-window {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    width: 528px;
+  }
+}
+
+.close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -474,15 +485,14 @@ img {
   justify-content: center;
   width: 30px;
   height: 30px;
-  background: $light-color;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+}
 
-  &-svg:hover,
-  &-svg:focus {
-    fill: $accent-color;
-  }
+.close-btn-svg:hover, .close-btn-svg:focus {
+  fill: #2196f3;
 }
 
 .close {
@@ -493,138 +503,139 @@ img {
 .modal-form {
   display: flex;
   flex-direction: column;
+}
 
-  &-title {
-    margin-bottom: 12px;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $title-text-color;
-  }
+.modal-form-title {
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
 
-  &-field {
-    position: relative;
+.modal-form-field {
+  position: relative;
+}
 
-    &:not(:last-child) {
-      margin-bottom: 10px;
-    }
-  }
+.modal-form-field:not(:last-child) {
+  margin-bottom: 10px;
+}
 
-  &-label {
-    font-size: 12px;
-    line-height: 1.166;
-    letter-spacing: 0.01em;
-  }
+.modal-form-label {
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
+}
 
-  &-input {
-    display: block;
-    width: 100%;
-    height: 40px;
-    margin-top: 4px;
-    padding-left: 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    cursor: pointer;
+.modal-form-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  margin-top: 4px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+}
 
-    &:focus {
-      outline: none;
-      border: 1px solid $accent-color;
-      transition: transform $duration $timing-function;
-    }
-  }
+.modal-form-input:focus {
+  outline: none;
+  border: 1px solid #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  &-icon {
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    bottom: 11px;
-    left: 12px;
+.modal-form-icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  bottom: 11px;
+  left: 12px;
+}
 
-    .modal-form-input:focus + & {
-      fill: $accent-color;
-      transition: transform $duration $timing-function;
-    }
-  }
+.modal-form-input:focus + .modal-form-icon {
+  fill: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-comment {
   margin-top: 10px;
   margin-bottom: 20px;
+}
 
-  &-label {
-    font-size: 12px;
-    line-height: 1.166;
-    letter-spacing: 0.01em;
-  }
+.modal-comment-label {
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
+}
 
-  &-area {
-    width: 100%;
-    height: 120px;
-    margin-top: 4px;
-    padding: 12px 16px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
+.modal-comment-area {
+  width: 100%;
+  height: 120px;
+  margin-top: 4px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+}
 
-    &:focus {
-      outline: none;
-      border: 1px solid $accent-color;
-      transition: transform $duration $timing-function;
-    }
+.modal-comment-area:focus {
+  outline: none;
+  border: 1px solid #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    &::placeholder {
-      font-size: 12px;
-      line-height: 1.17;
-      letter-spacing: 0.01em;
-      color: rgba(117, 117, 117, 0.5);
-    }
-  }
+.modal-comment-area::placeholder {
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-policy-label {
-  font-size: 14px;
-  line-height: 1.714;
+  font-size: 12px;
+  line-height: 1.171;
   letter-spacing: 0.03em;
+}
 
-  &::before {
-    content: "";
-    width: 16px;
-    height: 15px;
-    display: inline-block;
-    border: 1px solid $title-text-color;
-    border-radius: 2px;
-    margin-right: 8px;
-    transition: transform $duration $timing-function;
+.modal-policy-label::before {
+  content: "";
+  width: 16px;
+  height: 15px;
+  display: inline-block;
+  border: 1px solid #212121;
+  border-radius: 2px;
+  margin-right: 8px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    .modal-form-policy:checked + & {
-      background-image: url(../images/svg/icon-check.svg);
-      border: none;
-    }
-  }
+.modal-form-policy:checked + .modal-policy-label::before {
+  background-image: url(../images/svg/icon-check.svg);
+  border: none;
 }
 
 .modal-policy-link {
-  color: $accent-color;
+  color: #2196f3;
 }
 
 .modal-btn {
-  margin: 30px 124px 0;
+  margin-top: 30px;
   width: 200px;
   height: 50px;
+  align-self: center;
   font-weight: bold;
   font-size: 16px;
   line-height: 1, 875;
   letter-spacing: 0.06em;
-  color: $light-color;
-  background: $accent-color;
+  color: #ffffff;
+  background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   cursor: pointer;
 }
- */
+
 /* .social-networks {
   display: flex;
   justify-content: center;
