--- a/css/main.css
+++ b/css/main.css
@@ -1160,16 +1160,122 @@ img {
   letter-spacing: 0.03em;
 }
 
-/* .clients-section-title {
-  margin-bottom: 50px;
+.clients-section-title {
+  margin-bottom: 30px;
   font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 1.172;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 1200px) {
+  .clients-section-title {
+    margin-bottom: 50px;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.167;
+  }
+}
+
 .clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.clients-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .clients-list-link {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list-link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list-link {
+    width: 170px;
+  }
+}
+
+.clients-list-link:hover, .clients-list-link:focus {
+  border: 1px solid #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .clients-list-item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list-item:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.clients-list-svg {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients-list-link:hover .clients-list-svg,
+.clients-list-link:focus .clients-list-svg {
+  fill: #2196f3;
+}
+
+.ya-co {
+  width: 44.27px;
+  height: 49.23px;
+}
+
+.tagline-here {
+  width: 40px;
+  height: 52px;
+}
+
+.company {
+  width: 41px;
+  height: 42.6px;
+}
+
+.foster-peters {
+  width: 79.66px;
+  height: 42.22px;
+}
+
+.brand {
+  width: 59px;
+  height: 47px;
+}
+
+.tag-line {
+  width: 88.48px;
+  height: 45.44px;
+}
+
+/*.clients-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -1178,7 +1284,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    width: 210/226/170px;
     height: 90px;
     border: 1px solid $social-networks-color;
     box-sizing: border-box;
