--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,13 +1,113 @@
-/* .clients-section-title {
-  margin-bottom: 50px;
+.clients-section-title {
+  margin-bottom: 30px;
   font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 1.172;
   text-align: center;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.167;
+  }
 }
 
 .clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  &-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90px;
+    border: 1px solid $social-networks-color;
+    box-sizing: border-box;
+    border-radius: 4px;
+
+    transition: border $duration $timing-function;
+
+    @media screen and (max-width: 767px) {
+      width: 210px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
+
+    &:hover,
+    &:focus {
+      border: 1px solid $accent-color;
+    }
+  }
+
+  &-item:nth-child(-n + 4) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+  &-item:nth-child(-n + 3) {
+    @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &-item:not(:last-child) {
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
+  }
+
+  &-svg {
+    fill: $social-networks-color;
+
+    transition: fill $duration $timing-function;
+
+    .clients-list-link:hover &,
+    .clients-list-link:focus & {
+      fill: $accent-color;
+    }
+  }
+}
+
+.ya-co {
+  width: 44.27px;
+  height: 49.23px;
+}
+
+.tagline-here {
+  width: 40px;
+  height: 52px;
+}
+
+.company {
+  width: 41px;
+  height: 42.6px;
+}
+
+.foster-peters {
+  width: 79.66px;
+  height: 42.22px;
+}
+
+.brand {
+  width: 59px;
+  height: 47px;
+}
+
+.tag-line {
+  width: 88.48px;
+  height: 45.44px;
+}
+
+/*.clients-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -16,7 +116,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    width: 210/226/170px;
     height: 90px;
     border: 1px solid $social-networks-color;
     box-sizing: border-box;
