--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -27,13 +27,13 @@ img {
 .address {
   font-style: normal;
 
-  @media screen and (min-width: 768px) {
+  /* @media screen and (min-width: 768px) {
     padding: 21px 0;
   }
 
   @media screen and (min-width: 1200px) {
     padding: 32px 0;
-  }
+  } */
 }
 
 .section {
