--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,14 +6,23 @@
   line-height: 1.167;
   letter-spacing: 0.03em;
 
-  @media screen and (min-width: 768px) {
-    margin-right: 88px;
+  & .header {
+    @media screen and (min-width: 768px) {
+      margin-right: 88px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 93px;
+      font-size: 26px;
+      line-height: 1.192;
+    }
   }
 
-  @media screen and (min-width: 1200px) {
-    margin-right: 93px;
-    font-size: 26px;
-    line-height: 1.192;
+  & .footer {
+    @media screen and (max-width: 1199px) {
+      margin-right: 0;
+      text-align: center;
+    }
   }
 
   .navigation & {
