--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,7 +1,17 @@
-/* .subscribe {
-  padding-top: 72px;
-  padding-bottom: 94px;
-  margin-left: 93px;
+.subscribe {
+  @media screen and (max-width: 767px) {
+    padding-top: 60px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 12px;
+    margin-left: 93px;
+  }
 
   &-title {
     font-weight: bold;
@@ -10,19 +20,26 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: $light-color;
+
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }
   }
 
   &-btn {
+    position: relative;
     width: 200px;
     height: 50px;
-    margin-left: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 29px;
+    padding-right: 62px;
     font-weight: bold;
     font-size: 16px;
     line-height: 1, 875;
     display: flex;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
     letter-spacing: 0.06em;
     color: $light-color;
     background: $accent-color;
@@ -30,50 +47,64 @@
     border-radius: 4px;
     border: none;
 
+    @media screen and (min-width: 1200px) {
+      margin-left: 12px;
+      padding-left: 29px;
+    }
+
     &-svg {
       width: 24px;
       height: 24px;
-      margin-left: 10px;
+      position: absolute;
+      bottom: 13px;
+      right: 28px;
+      /*  margin-left: 10px; */
     }
   }
-} */
+}
 
-/*.subscribe-title {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1, 142;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: $light-color;
-}*/
-
-/* .subscribe-form {
+.subscribe-form {
   display: flex;
+  align-items: center;
   padding-top: 20px;
 
-  &-input {
-    width: 358px;
-    height: 50px;
-    padding-left: 15px;
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+  }
 
+  &-input {
+    width: 100%;
+    height: 50px;
+    padding-left: 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: transparent;
-
     font-size: 16px;
     line-height: 1.25;
     align-items: center;
     letter-spacing: 0.03em;
-
     color: rgba(255, 255, 255, 0.6);
+
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
+
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 20px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      padding-left: 15px;
+    }
 
     &:focus {
       outline: none;
     }
   }
-} */
+}
 
 /*.subscribe-form-input {
   width: 358px;
