--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,4 +11,12 @@
 
 .header .address {
   margin-left: auto;
+
+  @media screen and (min-width: 768px) {
+    padding: 21px 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 32px 0;
+  }
 }
