--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -35,17 +35,11 @@ body {
 
 img {
   display: block;
+  width: 100%;
 }
 
 .address {
   font-style: normal;
-  /* @media screen and (min-width: 768px) {
-    padding: 21px 0;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding: 32px 0;
-  } */
 }
 
 .section {
@@ -240,7 +234,7 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  /* bottom: 0; */
+  bottom: 0;
   display: block;
   width: 100%;
   height: 4px;
@@ -365,13 +359,6 @@ img {
   padding: 0;
   border: none;
   background-color: transparent;
-  /*align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  background: $light-color;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;*/
   cursor: pointer;
 }
 
@@ -381,7 +368,7 @@ img {
   }
 }
 
-.menu-btn-svg:hover, .menu-btn-svg:focus {
+.menu-btn-close:hover, .menu-btn-open:hover, .menu-btn-close:focus, .menu-btn-open:focus {
   fill: #2196f3;
 }
 
@@ -649,14 +636,45 @@ img {
   }
 }
 
-/* .portfolio-buttons {
+@media screen and (min-width: 768px) {
+  .header .site-logo {
+    margin-right: 88px;
+  }
+}
+
+.portfolio-buttons {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-buttons {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-buttons {
+    margin-bottom: 40px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-buttons {
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio-btn:not(:last-child) {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-btn:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 15px;
+  }
 }
 
 .portfolio-selection-btn {
@@ -666,27 +684,23 @@ img {
   box-sizing: border-box;
   box-shadow: none;
   border-radius: 4px;
-  background-color: $team-color;
+  background-color: #f5f4fa;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
-  transition: color $duration $timing-function,
-    background-color $duration $timing-function,
-    box-shadow $duration $timing-function;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  &:hover,
-  &:focus {
-    border: 1px solid #eeeeee;
-    box-sizing: border-box;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    color: $light-color;
-    background-color: $accent-color;
-  }
+.portfolio-selection-btn:hover, .portfolio-selection-btn:focus {
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .portfolio-list {
@@ -694,85 +708,112 @@ img {
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 767px) {
+  .portfolio-list {
+    justify-content: center;
+  }
+}
+
 .portfolio-item {
   display: flex;
-  width: 370px;
-  height: 404px;
   box-sizing: border-box;
+  height: 404px;
   margin-bottom: 30px;
-  background: $light-color;
-
-  &:not(:nth-child(3n)) {
+  background: #ffffff;
+  /* @media screen and (max-width: 767px) {
+    width: 450px;
+  } */
+  /*  &:not(:nth-child(3n)) {
     margin-right: 30px;
   }
 
   &:nth-last-child(-n + 3) {
     margin-bottom: 0px;
-  }
+  } */
+}
 
-  &-link {
-    display: block;
-    box-shadow: none;
-    transition: box-shadow $duration $timing-function;
-
-    &:hover,
-    &:focus {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-item {
+    width: 354px;
   }
-
-  &-box {
-    padding: 20px 24px;
-    border: 1px solid #eeeeee;
-    border-top: none;
+  .portfolio-item:nth-child(odd) {
+    margin-right: 30px;
   }
+}
 
-  &-title {
-    margin-bottom: 4px;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+@media screen and (min-width: 1200px) {
+  .portfolio-item {
+    width: 370px;
   }
+  .portfolio-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .portfolio-item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+}
 
-  &-desc {
-    color: $primary-text-color;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.03em;
-  }
+.portfolio-item-link {
+  display: block;
+  box-shadow: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item-link:hover, .portfolio-item-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-item-box {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
+
+.portfolio-item-title {
+  margin-bottom: 4px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-item-desc {
+  color: #757575;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.03em;
 }
 
 .portfolio-item-img {
   position: relative;
   display: block;
   overflow: hidden;
+}
 
-  &::after {
-    content: "Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.";
-    position: absolute;
-    display: block;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    padding: 63px 24px;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
-    color: $light-color;
-    background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(100%);
-    transition: transform $duration $timing-function;
+.portfolio-item-img::after {
+  content: "Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.";
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    .portfolio-item-link:hover &,
-    .portfolio-item-link:focus & {
-      transform: translateY(0%);
-    }
-  }
-} */
+.portfolio-item-link:hover .portfolio-item-img::after,
+.portfolio-item-link:focus .portfolio-item-img::after {
+  transform: translateY(0%);
+}
+
 .footer {
   background-color: #2f303a;
 }
