--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -22,18 +22,11 @@ body {
 
 img {
   display: block;
+  width: 100%;
 }
 
 .address {
   font-style: normal;
-
-  /* @media screen and (min-width: 768px) {
-    padding: 21px 0;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding: 32px 0;
-  } */
 }
 
 .section {
