--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,22 +1,28 @@
 .header {
   position: relative;
   border-bottom: 1px solid $line-color;
-}
 
-.header .container {
-  display: flex;
-  align-items: center;
-  /* height: 80px; */
-}
-
-.header .address {
-  margin-left: auto;
-
-  @media screen and (min-width: 768px) {
-    padding: 21px 0;
+  & .container {
+    display: flex;
+    align-items: center;
+    /* height: 80px; */
   }
 
-  @media screen and (min-width: 1200px) {
-    padding: 32px 0;
+  & .address {
+    margin-left: auto;
+
+    @media screen and (min-width: 768px) {
+      padding: 21px 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding: 32px 0;
+    }
+  }
+
+  & .site-logo {
+    @media screen and (min-width: 768px) {
+      margin-right: 88px;
+    }
   }
 }
