--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,11 +1,29 @@
-/* .portfolio-buttons {
+.portfolio-buttons {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 40px;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio-btn:not(:last-child) {
   margin-right: 8px;
+}
+
+.portfolio-btn:not(:nth-last-child(-n + 2)) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 15px;
+  }
 }
 
 .portfolio-selection-btn {
@@ -41,23 +59,49 @@
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+
+  @media screen and (max-width: 767px) {
+    justify-content: center;
+  }
 }
 
 .portfolio-item {
   display: flex;
-  width: 370px;
-  height: 404px;
   box-sizing: border-box;
+  height: 404px;
   margin-bottom: 30px;
   background: $light-color;
 
-  &:not(:nth-child(3n)) {
+  /* @media screen and (max-width: 767px) {
+    width: 450px;
+  } */
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    &:nth-child(odd) {
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
+
+  /*  &:not(:nth-child(3n)) {
     margin-right: 30px;
   }
 
   &:nth-last-child(-n + 3) {
     margin-bottom: 0px;
-  }
+  } */
 
   &-link {
     display: block;
@@ -121,4 +165,4 @@
       transform: translateY(0%);
     }
   }
-} */
+}
