--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,9 +1,9 @@
 .works-section {
-  @media screen and (min-width: 320px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     display: none;
   }
 }
-/* .works {
+.works {
   display: flex;
   flex-wrap: wrap;
 
@@ -48,4 +48,3 @@
     }
   }
 }
- */
