--- a/css/main.css
+++ b/css/main.css
@@ -240,9 +240,15 @@ img {
   background-color: #2196f3;
 }
 
+@media screen and (max-width: 767px) {
+  .current::after {
+    bottom: -10px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .current::after {
-    bottom: 0;
+    bottom: -2px;
   }
 }
 
@@ -387,6 +393,7 @@ img {
   display: flex;
   background-color: #ffffff;
   text-align: center;
+  z-index: 2;
 }
 
 .menu-container.is-open {
