--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -84,8 +84,12 @@
     height: 4px;
     background-color: $accent-color;
 
+    @media screen and (max-width: 767px) {
+      bottom: -10px;
+    }
+
     @media screen and (min-width: 768px) {
-      bottom: 0;
+      bottom: -2px;
     }
   }
 }
