--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -394,7 +394,12 @@ img {
   display: flex;
   background-color: #ffffff;
   text-align: center;
-  z-index: 2;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    z-index: 2;
+  }
 }
 
 .menu-container.is-open {
@@ -592,30 +597,6 @@ img {
   outline: none;
 }
 
-/*.subscribe-form-input {
-  width: 358px;
-  height: 50px;
-  padding-left: 15px;
-
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-
-  font-size: 16px;
-  line-height: 1.25;
-  align-items: center;
-  letter-spacing: 0.03em;
-
-  color: rgba(255, 255, 255, 0.6);
-
- 
-}
-
-.subscribe-form-input:focus {
-  outline: none;
-}*/
 .header {
   position: relative;
   border-bottom: 1px solid #ececec;
@@ -727,16 +708,6 @@ img {
   height: 404px;
   margin-bottom: 30px;
   background: #ffffff;
-  /* @media screen and (max-width: 767px) {
-    width: 450px;
-  } */
-  /*  &:not(:nth-child(3n)) {
-    margin-right: 30px;
-  }
-
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
-  } */
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
