--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -36,7 +36,10 @@
   display: flex;
   background-color: $light-color;
   text-align: center;
-  z-index: 2;
+
+  @media screen and (max-width: 767px) {
+    z-index: 2;
+  }
 
   &.is-open {
     display: block;
