--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -39,7 +39,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  @media screen and (min-width: 480px) and (max-width: 1199px) {
+  @media screen and (min-width: 480px) {
     width: 450px;
   }
 
