--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,6 +1,7 @@
 .works-section {
-  @media screen and (max-width: 1199px) {
-    display: none;
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
   }
 }
 .works {
