--- a/css/main.css
+++ b/css/main.css
@@ -108,10 +108,15 @@ img {
   }
 }
 
-@media screen and (max-width: 1199px) {
+.site-logo .footer {
+  margin-right: 0;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
   .site-logo .footer {
-    margin-right: 0;
-    text-align: center;
+    /* margin-right: 0; */
+    text-align: left;
   }
 }
 
@@ -119,7 +124,7 @@ img {
   padding: 16px 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .navigation .site-logo {
     padding: 26px 0;
   }
@@ -143,16 +148,11 @@ img {
 .navigation {
   display: flex;
   align-items: center;
+  width: 480px;
+  justify-content: space-between;
 }
 
-@media screen and (max-width: 767px) {
-  .navigation {
-    width: 480px;
-    justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .navigation {
     width: 768px;
   }
@@ -169,10 +169,17 @@ img {
   align-items: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .site-nav {
     flex-direction: column;
     margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    flex-direction: row;
+    margin-bottom: 0px;
   }
 }
 
@@ -182,9 +189,6 @@ img {
 
 .site-nav-item:not(:last-child) {
   margin-bottom: 40px;
-  /* @media screen and (max-width: 767px) {
-        margin-bottom: 40px;
-      } */
 }
 
 @media screen and (min-width: 768px) {
@@ -233,17 +237,12 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   display: block;
   width: 100%;
   height: 4px;
   background-color: #2196f3;
-}
-
-@media screen and (max-width: 767px) {
-  .current::after {
-    bottom: -10px;
-  }
+  border-radius: 2px;
 }
 
 @media screen and (min-width: 768px) {
@@ -252,26 +251,38 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .current::after {
+    bottom: 0px;
+  }
+}
+
 .contacts-list {
   display: flex;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .contacts-list {
     align-items: center;
+    flex-direction: column;
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .contacts-list {
-    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list {
+    flex-direction: row;
   }
 }
 
 .contacts-list-link {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   font-weight: 500;
   font-size: 18px;
   line-height: 1.667;
@@ -315,7 +326,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .contacts-list-item:first-child {
-    margin-right: 50px;
+    margin-right: 30px;
   }
 }
 
@@ -356,9 +367,6 @@ img {
 }
 
 .menu-btn {
-  /*position: absolute;
-  top: 8px;
-  right: 8px;*/
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -395,9 +403,15 @@ img {
   text-align: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .menu-container {
-    z-index: 2;
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    z-index: 0;
   }
 }
 
@@ -405,7 +419,7 @@ img {
   display: block;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .menu-container {
     position: absolute;
     top: 100%;
@@ -419,9 +433,11 @@ img {
 
 @media screen and (min-width: 768px) {
   .menu-container {
+    position: static;
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    padding: 0px;
   }
 }
 
@@ -465,7 +481,7 @@ img {
   border-radius: 4px;
 }
 
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .modal-window {
     width: 450px;
   }
@@ -684,16 +700,15 @@ img {
   fill: #ffffff;
 }
 
-@media screen and (max-width: 767px) {
-  .subscribe {
-    padding-top: 60px;
-  }
+.subscribe {
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .subscribe {
-    flex-direction: column;
-    align-items: center;
+    padding-top: 0px;
   }
 }
 
@@ -709,13 +724,14 @@ img {
   font-size: 14px;
   line-height: 1, 142;
   letter-spacing: 0.03em;
+  text-align: center;
   text-transform: uppercase;
   color: #ffffff;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscribe-title {
-    text-align: center;
+    text-align: left;
   }
 }
 
@@ -754,18 +770,18 @@ img {
   position: absolute;
   bottom: 13px;
   right: 28px;
-  /*  margin-left: 10px; */
 }
 
 .subscribe-form {
   display: flex;
   align-items: center;
+  flex-direction: column;
   padding-top: 20px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscribe-form {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 
@@ -773,6 +789,7 @@ img {
   width: 100%;
   height: 50px;
   padding-left: 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -791,16 +808,11 @@ img {
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .subscribe-form-input {
-    margin-bottom: 20px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .subscribe-form-input {
     width: 358px;
     padding-left: 15px;
+    margin-bottom: 0px;
   }
 }
 
@@ -866,7 +878,7 @@ img {
   text-transform: uppercase;
 }
 
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .hero-title {
     font-size: 26px;
     line-height: 1.615;
@@ -895,19 +907,19 @@ img {
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-mobile.jpg);
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-mobile@2x.jpg);
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_1/hero-bg-tablet.jpg);
   }
@@ -950,7 +962,7 @@ img {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .advantages-item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -962,15 +974,27 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .advantages-item:nth-child(4n + 1), .advantages-item:nth-child(4n + 2) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
+  .advantages-item:nth-last-child(4n + 1), .advantages-item:nth-last-child(4n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .advantages-item:nth-child(4n + 1), .advantages-item:nth-child(4n + 3) {
     margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-item:nth-child(4n + 1), .advantages-item:nth-child(4n + 2) {
+    margin-bottom: 0px;
   }
 }
 
@@ -1024,9 +1048,13 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (max-width: 1199px) {
+.works-section {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
   .works-section {
-    display: none;
+    display: block;
   }
 }
 
@@ -1095,7 +1123,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 320px) {
   .team-section-title {
     margin-bottom: 30px;
     font-size: 28px;
@@ -1116,14 +1144,6 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
-  /* @media screen and (max-width: 767px) {
-      width: 450px;
-      height: 622px;
-    }*/
-  /* @media screen and (min-width: 768px) {
-      width: 354px;
-      height: 536px;
-    } */
 }
 
 @media screen and (min-width: 1200px) {
@@ -1133,9 +1153,21 @@ img {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .team-list-item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list-item:nth-last-child(4n + 1), .team-list-item:nth-last-child(4n + 2) {
+    margin-bottom: 0px;
   }
 }
 
@@ -1145,15 +1177,15 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 2) {
-    margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 3) {
+    margin-right: 30px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 3) {
-    margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .team-list-item:nth-child(4n + 1), .team-list-item:nth-child(4n + 2) {
+    margin-bottom: 0px;
   }
 }
 
@@ -1211,29 +1243,27 @@ img {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
-  .clients-list-link {
-    width: 210px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .clients-list-link {
-    width: 226px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .clients-list-link {
-    width: 170px;
-  }
-}
-
 .clients-list-link:hover, .clients-list-link:focus {
   border: 1px solid #2196f3;
 }
 
-@media screen and (max-width: 767px) {
+.clients-list-item {
+  width: calc((100% - 15px * 2) / 2);
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list-item {
+    width: calc((100% - 15px * 4) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list-item {
+    width: 170px;
+  }
+}
+
+@media screen and (min-width: 320px) {
   .clients-list-item:nth-child(-n + 4) {
     margin-bottom: 30px;
   }
@@ -1242,6 +1272,18 @@ img {
 @media screen and (min-width: 768px) {
   .clients-list-item:nth-child(-n + 3) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list-item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list-item:nth-child(-n + 3) {
+    margin-bottom: 0px;
   }
 }
 
@@ -1307,9 +1349,15 @@ img {
   padding-right: 15px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .footer .container {
     flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer .container {
+    flex-direction: row;
   }
 }
 
@@ -1328,7 +1376,7 @@ img {
   flex-direction: column;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) {
   .footer-contacts-list {
     text-align: center;
     padding-bottom: 60px;
@@ -1344,6 +1392,8 @@ img {
 @media screen and (min-width: 1200px) {
   .footer-contacts-list {
     margin-right: 70px;
+    text-align: left;
+    padding-bottom: 0px;
   }
 }
 
@@ -1384,7 +1434,7 @@ img {
 }
 
 /*====social-networks====*/
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer-social-networks {
     margin-top: 5px;
   }
@@ -1392,6 +1442,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .footer-social-networks {
+    margin-top: 0px;
     padding-top: 12px;
   }
 }
@@ -1405,6 +1456,12 @@ img {
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .social-networks-title {
+    text-align: left;
+  }
 }
 
 .social-networks-link:hover,
