--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -109,10 +109,15 @@ img {
   }
 }
 
-@media screen and (max-width: 1199px) {
+.site-logo .footer {
+  margin-right: 0;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
   .site-logo .footer {
-    margin-right: 0;
-    text-align: center;
+    /* margin-right: 0; */
+    text-align: left;
   }
 }
 
@@ -120,7 +125,7 @@ img {
   padding: 16px 0;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .navigation .site-logo {
     padding: 26px 0;
   }
@@ -144,16 +149,11 @@ img {
 .navigation {
   display: flex;
   align-items: center;
+  width: 480px;
+  justify-content: space-between;
 }
 
-@media screen and (max-width: 767px) {
-  .navigation {
-    width: 480px;
-    justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .navigation {
     width: 768px;
   }
@@ -170,10 +170,17 @@ img {
   align-items: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .site-nav {
     flex-direction: column;
     margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    flex-direction: row;
+    margin-bottom: 0px;
   }
 }
 
@@ -183,9 +190,6 @@ img {
 
 .site-nav-item:not(:last-child) {
   margin-bottom: 40px;
-  /* @media screen and (max-width: 767px) {
-        margin-bottom: 40px;
-      } */
 }
 
 @media screen and (min-width: 768px) {
@@ -234,17 +238,12 @@ img {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   display: block;
   width: 100%;
   height: 4px;
   background-color: #2196f3;
-}
-
-@media screen and (max-width: 767px) {
-  .current::after {
-    bottom: -10px;
-  }
+  border-radius: 2px;
 }
 
 @media screen and (min-width: 768px) {
@@ -253,26 +252,38 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .current::after {
+    bottom: 0px;
+  }
+}
+
 .contacts-list {
   display: flex;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .contacts-list {
     align-items: center;
+    flex-direction: column;
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .contacts-list {
-    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list {
+    flex-direction: row;
   }
 }
 
 .contacts-list-link {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   font-weight: 500;
   font-size: 18px;
   line-height: 1.667;
@@ -316,7 +327,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .contacts-list-item:first-child {
-    margin-right: 50px;
+    margin-right: 30px;
   }
 }
 
@@ -357,9 +368,6 @@ img {
 }
 
 .menu-btn {
-  /*position: absolute;
-  top: 8px;
-  right: 8px;*/
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -396,9 +404,15 @@ img {
   text-align: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .menu-container {
-    z-index: 2;
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    z-index: 0;
   }
 }
 
@@ -406,7 +420,7 @@ img {
   display: block;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .menu-container {
     position: absolute;
     top: 100%;
@@ -420,9 +434,11 @@ img {
 
 @media screen and (min-width: 768px) {
   .menu-container {
+    position: static;
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    padding: 0px;
   }
 }
 
@@ -473,16 +489,15 @@ img {
   fill: #ffffff;
 }
 
-@media screen and (max-width: 767px) {
-  .subscribe {
-    padding-top: 60px;
-  }
+.subscribe {
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .subscribe {
-    flex-direction: column;
-    align-items: center;
+    padding-top: 0px;
   }
 }
 
@@ -498,13 +513,14 @@ img {
   font-size: 14px;
   line-height: 1, 142;
   letter-spacing: 0.03em;
+  text-align: center;
   text-transform: uppercase;
   color: #ffffff;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscribe-title {
-    text-align: center;
+    text-align: left;
   }
 }
 
@@ -543,18 +559,18 @@ img {
   position: absolute;
   bottom: 13px;
   right: 28px;
-  /*  margin-left: 10px; */
 }
 
 .subscribe-form {
   display: flex;
   align-items: center;
+  flex-direction: column;
   padding-top: 20px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .subscribe-form {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 
@@ -562,6 +578,7 @@ img {
   width: 100%;
   height: 50px;
   padding-left: 16px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -580,16 +597,11 @@ img {
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .subscribe-form-input {
-    margin-bottom: 20px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .subscribe-form-input {
     width: 358px;
     padding-left: 15px;
+    margin-bottom: 0px;
   }
 }
 
@@ -634,17 +646,12 @@ img {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-}
-
-@media screen and (max-width: 767px) {
-  .portfolio-buttons {
-    margin-bottom: 40px;
-  }
+  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
   .portfolio-buttons {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     justify-content: center;
   }
 }
@@ -655,14 +662,18 @@ img {
   }
 }
 
-.portfolio-btn:not(:last-child) {
-  margin-right: 8px;
+.portfolio-btn {
+  margin-bottom: 15px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .portfolio-btn:not(:nth-last-child(-n + 2)) {
-    margin-bottom: 15px;
+    margin-bottom: 0px;
   }
+}
+
+.portfolio-btn:not(:last-child) {
+  margin-right: 8px;
 }
 
 .portfolio-selection-btn {
@@ -694,23 +705,23 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-}
-
-@media screen and (max-width: 767px) {
-  .portfolio-list {
-    justify-content: center;
-  }
+  /*  justify-content: center; */
 }
 
 .portfolio-item {
   display: flex;
   box-sizing: border-box;
-  height: 404px;
   margin-bottom: 30px;
   background: #ffffff;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
+  .portfolio-item {
+    height: 404px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .portfolio-item {
     width: 354px;
   }
@@ -722,6 +733,9 @@ img {
 @media screen and (min-width: 1200px) {
   .portfolio-item {
     width: 370px;
+  }
+  .portfolio-item:nth-child(odd) {
+    margin-right: 0px;
   }
   .portfolio-item:not(:nth-child(3n)) {
     margin-right: 30px;
@@ -742,7 +756,10 @@ img {
 }
 
 .portfolio-item-box {
-  padding: 20px 24px;
+  padding-top: 20px;
+  padding-left: 24px;
+  padding-bottom: 20px;
+  padding-right: 12px;
   border: 1px solid #eeeeee;
   border-top: none;
 }
@@ -808,9 +825,15 @@ img {
   padding-right: 15px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .footer .container {
     flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer .container {
+    flex-direction: row;
   }
 }
 
@@ -829,7 +852,7 @@ img {
   flex-direction: column;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1199px) {
+@media screen and (min-width: 320px) {
   .footer-contacts-list {
     text-align: center;
     padding-bottom: 60px;
@@ -845,6 +868,8 @@ img {
 @media screen and (min-width: 1200px) {
   .footer-contacts-list {
     margin-right: 70px;
+    text-align: left;
+    padding-bottom: 0px;
   }
 }
 
@@ -885,7 +910,7 @@ img {
 }
 
 /*====social-networks====*/
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer-social-networks {
     margin-top: 5px;
   }
@@ -893,6 +918,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .footer-social-networks {
+    margin-top: 0px;
     padding-top: 12px;
   }
 }
@@ -906,6 +932,12 @@ img {
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .social-networks-title {
+    text-align: left;
+  }
 }
 
 .social-networks-link:hover,
