--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,18 +1,22 @@
 .contacts-list {
   display: flex;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     align-items: center;
+    flex-direction: column;
   }
 
-  @media screen and (max-width: 1199px) {
-    flex-direction: column;
+  @media screen and (min-width: 768px) {
+    align-items: flex-start;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
   }
 
   &-link {
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     font-weight: 500;
     font-size: 18px;
     line-height: 1.667;
@@ -52,7 +56,7 @@
       margin-right: 0px;
 
       @media screen and (min-width: 1200px) {
-        margin-right: 50px;
+        margin-right: 30px;
       }
     }
   }
