--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,7 +1,4 @@
 .menu-btn {
-  /*position: absolute;
-  top: 8px;
-  right: 8px;*/
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -37,15 +34,19 @@
   background-color: $light-color;
   text-align: center;
 
-  @media screen and (max-width: 767px) {
-    z-index: 2;
+  @media screen and (min-width: 320px) {
+    z-index: 1;
+  }
+
+  @media screen and (min-width: 768px) {
+    z-index: 0;
   }
 
   &.is-open {
     display: block;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     position: absolute;
     top: 100%;
     left: 0;
@@ -56,8 +57,10 @@
   }
 
   @media screen and (min-width: 768px) {
+    position: static;
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    padding: 0px;
   }
 }
