--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,13 +1,10 @@
 .navigation {
   display: flex;
   align-items: center;
+  width: 480px;
+  justify-content: space-between;
 
-  @media screen and (max-width: 767px) {
-    width: 480px;
-    justify-content: space-between;
-  }
-
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     width: 768px;
   }
 
@@ -20,9 +17,14 @@
   display: flex;
   align-items: center;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 320px) {
     flex-direction: column;
     margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    margin-bottom: 0px;
   }
 
   &-item {
@@ -35,10 +37,6 @@
         margin-bottom: 0;
         margin-right: 50px;
       }
-
-      /* @media screen and (max-width: 767px) {
-        margin-bottom: 40px;
-      } */
     }
 
     & .link {
@@ -78,18 +76,19 @@
     content: "";
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -10px;
     display: block;
     width: 100%;
     height: 4px;
     background-color: $accent-color;
-
-    @media screen and (max-width: 767px) {
-      bottom: -10px;
-    }
+    border-radius: 2px;
 
     @media screen and (min-width: 768px) {
       bottom: -2px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      bottom: 0px;
     }
   }
 }
