--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,11 +1,10 @@
 .subscribe {
-  @media screen and (max-width: 767px) {
-    padding-top: 60px;
-  }
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
 
-  @media screen and (max-width: 1199px) {
-    flex-direction: column;
-    align-items: center;
+  @media screen and (min-width: 768px) {
+    padding-top: 0px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -18,11 +17,12 @@
     font-size: 14px;
     line-height: 1, 142;
     letter-spacing: 0.03em;
+    text-align: center;
     text-transform: uppercase;
     color: $light-color;
 
-    @media screen and (max-width: 1199px) {
-      text-align: center;
+    @media screen and (min-width: 1200px) {
+      text-align: left;
     }
   }
 
@@ -58,7 +58,6 @@
       position: absolute;
       bottom: 13px;
       right: 28px;
-      /*  margin-left: 10px; */
     }
   }
 }
@@ -66,16 +65,18 @@
 .subscribe-form {
   display: flex;
   align-items: center;
+  flex-direction: column;
   padding-top: 20px;
 
-  @media screen and (max-width: 1199px) {
-    flex-direction: column;
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
   }
 
   &-input {
     width: 100%;
     height: 50px;
     padding-left: 16px;
+    margin-bottom: 20px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -91,13 +92,10 @@
       width: 450px;
     }
 
-    @media screen and (max-width: 1199px) {
-      margin-bottom: 20px;
-    }
-
     @media screen and (min-width: 1200px) {
       width: 358px;
       padding-left: 15px;
+      margin-bottom: 0px;
     }
 
     &:focus {
