--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -14,7 +14,7 @@
     }
 
     &:not(:last-child) {
-      @media screen and (max-width: 767px) {
+      @media screen and (min-width: 320px) {
         margin-bottom: 30px;
       }
 
@@ -25,15 +25,29 @@
 
     &:nth-child(4n + 1),
     &:nth-child(4n + 2) {
-      @media screen and (min-width: 768px) and (max-width: 1199px) {
+      @media screen and (min-width: 768px) {
         margin-bottom: 30px;
+      }
+    }
+
+    &:nth-last-child(4n + 1),
+    &:nth-last-child(4n + 2) {
+      @media screen and (min-width: 768px) {
+        margin-bottom: 0px;
       }
     }
 
     &:nth-child(4n + 1),
     &:nth-child(4n + 3) {
-      @media screen and (min-width: 768px) and (max-width: 1199px) {
+      @media screen and (min-width: 768px) {
         margin-right: 30px;
+      }
+    }
+
+    &:nth-child(4n + 1),
+    &:nth-child(4n + 2) {
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 0px;
       }
     }
   }
