--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -30,32 +30,45 @@
 
     transition: border $duration $timing-function;
 
-    @media screen and (max-width: 767px) {
-      width: 210px;
-    }
-
-    @media screen and (min-width: 768px) {
-      width: 226px;
-    }
-
-    @media screen and (min-width: 1200px) {
-      width: 170px;
-    }
-
     &:hover,
     &:focus {
       border: 1px solid $accent-color;
     }
   }
 
+  &-item {
+    width: calc((100% - 15px * 2) / 2);
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 15px * 4) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
+  }
+
   &-item:nth-child(-n + 4) {
-    @media screen and (max-width: 767px) {
+    @media screen and (min-width: 320px) {
       margin-bottom: 30px;
     }
   }
+
   &-item:nth-child(-n + 3) {
     @media screen and (min-width: 768px) {
       margin-bottom: 30px;
+    }
+  }
+
+  &-item:nth-last-child(-n + 3) {
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+    }
+  }
+
+  &-item:nth-child(-n + 3) {
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0px;
     }
   }
 
