--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -14,7 +14,7 @@
       font-weight: bold;
       letter-spacing: 0.03em;
 
-      @media screen and (max-width: 1199px) {
+      @media screen and (min-width: 320px) {
         margin-bottom: 30px;
         font-size: 28px;
         line-height: 1.177;
@@ -35,24 +35,28 @@
     border-radius: 0px 0px 4px 4px;
     background: $light-color;
 
-    /* @media screen and (max-width: 767px) {
-      width: 450px;
-      height: 622px;
-    }*/
-
-    /* @media screen and (min-width: 768px) {
-      width: 354px;
-      height: 536px;
-    } */
-
     @media screen and (min-width: 1200px) {
       width: 270px;
       height: 428px;
     }
 
     &:not(:last-child) {
-      @media screen and (max-width: 767px) {
+      @media screen and (min-width: 320px) {
         margin-bottom: 30px;
+      }
+    }
+
+    &:nth-child(4n + 1),
+    &:nth-child(4n + 2) {
+      @media screen and (min-width: 768px) {
+        margin-bottom: 30px;
+      }
+    }
+
+    &:nth-last-child(4n + 1),
+    &:nth-last-child(4n + 2) {
+      @media screen and (min-width: 768px) {
+        margin-bottom: 0px;
       }
     }
 
@@ -63,16 +67,16 @@
     }
 
     &:nth-child(4n + 1),
-    &:nth-child(4n + 2) {
-      @media screen and (min-width: 768px) and (max-width: 1199px) {
-        margin-bottom: 30px;
+    &:nth-child(4n + 3) {
+      @media screen and (min-width: 768px) {
+        margin-right: 30px;
       }
     }
 
     &:nth-child(4n + 1),
-    &:nth-child(4n + 3) {
-      @media screen and (min-width: 768px) and (max-width: 1199px) {
-        margin-right: 30px;
+    &:nth-child(4n + 2) {
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 0px;
       }
     }
   }
